--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,6 +35,9 @@
           <i class="material-icons md-18">home</i> {{ site.homepage }}<br/>
         </a>
         -->
+        <a href="{{ site.google_scholar }}">
+          <i class="ai ai-google-scholar"></i>  Google Scholar<br/>
+        </a>
         </a>
         <a href="{{ site.github }}">
           <i class="fab fa-github"></i> Github<br/>
