--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,9 @@
         <a href="{{ site.github }}">
           <i class="fab fa-github"></i> Github<br/>
         </a>
+        <a href="{{ site.linkedin }}">
+          <i class="fab fa-linkedin"></i> LinkedIn<br/>
+        </a>
         </a>
         <a href="{{ site.cv }}">
           <i class="material-icons md-18">insert_drive_file</i> CV<br/>
@@ -54,7 +57,7 @@
 
       </section>
       <footer>
-        <p><small>Hosted on GitHub Pages<br/> Theme by <a href="https://github.com/orderedlist">orderedlist</a> and <a href="https://homes.cs.washington.edu/~eunsol/">eunsol</a></small></p>
+        <p><small>Hosted on GitHub Pages<br/> Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
