--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,6 +38,9 @@
         <a href="{{ site.google_scholar }}">
           <i class="ai ai-google-scholar"></i>  Google Scholar<br/>
         </a>
+        <a href="{{ site.semantic_scholar }}">
+          <i class="ai ai-semantic-scholar"></i>  Semantic Scholar<br/>
+        </a>
         </a>
         <a href="{{ site.github }}">
           <i class="fab fa-github"></i> Github<br/>
